[project]
name = "my-smithery-test"
version = "0.1.0"
description = "A test of custom MCP server for Railway."
authors = [{ name = "Sagar Tamang", email = "cs22bcagn033@kazirangauniversity.in" }]
dependencies = [
    "mcp[cli]",
]
requires-python = ">=3.8"

[build-system]
requires = ["uv >= 0.1.0"]
build-backend = "uv.backend"